# tarui-project

./: .gitignore  README.md  package.json  pnpm-lock.yaml  svelte.config.js  tailwind.config.ts
.github/workflows/: build.yml  main.yml
crates-workspace/: Cargo.toml
crates-workspace/crates/api/: Cargo.toml  cert.pem  key.pem
crates-workspace/crates/api/src/: lib.rs  middleware.rs  route.rs
crates-workspace/crates/api/src/auth/: user.rs
crates-workspace/crates/api/src/websocket/: handler.rs  server.rs
crates-workspace/crates/constant/src/: lib.rs
crates-workspace/crates/crud/: Cargo.toml
crates-workspace/crates/crud/examples/: test.rs
crates-workspace/crates/crud/src/auth/: email.rs  user.rs
crates-workspace/crates/error/: Cargo.toml
crates-workspace/crates/error/src/: lib.rs
crates-workspace/crates/macros/: Cargo.toml
crates-workspace/crates/migration/: Cargo.toml
crates-workspace/crates/migration/src/: lib.rs  m20240828_090802_role.rs  m20240828_090938_user.rs  m20240828_093850_user_role.rs
crates-workspace/crates/model/: Cargo.toml
crates-workspace/crates/model/examples/: query.rs
crates-workspace/crates/model/src/: mod.rs  prelude.rs  role.rs  user.rs  user_role.rs
crates-workspace/crates/schema/: Cargo.toml
crates-workspace/crates/schema/src/: lib.rs  state.rs
crates-workspace/crates/schema/src/auth/: user.rs
crates-workspace/crates/utils/: Cargo.toml
crates-workspace/crates/utils/src/: lib.rs
src/: app.css  app.d.ts  app.html  hooks.client.ts
src-tauri/: tauri.conf.json
src-tauri/src/: main.rs
src/lib/: store.ts
src/lib/api/: request.ts
src/lib/api/auth/: user.ts
src/lib/component/: button.svelte  input.svelte  progress.svelte
src/lib/component/auth/: forgetPassword.svelte  register.svelte
src/lib/component/auth/component/: passwordVarify.svelte
src/lib/component/home/: bottom.svelte  header.svelte  middle.svelte
src/routes/: +layout.svelte  +page.svelte
src/routes/auth/change_password/: +page.svelte
src/routes/auth/login/: +page.svelte
src/routes/home/: +page.svelte
