[workspace]
members = ["crates/*"]
resolver = "2"


[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
tracing = "0.1.40"
serde_json = "1"
serde = { version = "1.0.193", features = ["derive"] }
serde_yaml = "0.9"
libsqlite3-sys = "0.30.1"
sqlx = { version = "0.7", features = [
    "runtime-tokio-native-tls",
    "sqlx-postgres",
    "migrate",
    "macros",
] }
sqlx-postgres = { version = "0.8.0" }
anyhow = "1.0.86"
sea-orm = { version = "1", features = [
    "runtime-tokio-native-tls",
    "macros",
    "with-time",
    "with-json",
    "sqlx-postgres",
] }
log = "0.4"
async-trait = "0.1"
chrono = "0.4"
thiserror = "1"
deadpool-redis = "0.17"
actix-web = "4"
tera = "1"
