[package]
name = "crud"
version = "0.1.0"
edition = "2021"

[[examples]]
name = "test"
path = "examples/test"

[dependencies]
sqlx={workspace = true}
sqlx-postgres ={workspace = true}
error = {path = "../error"}
async-trait = "0.1.81"
hmac = "0.12.1"
sha2 = "0.10.8"
base64 = "0.13.1"
jwt = "0.16.0"
anyhow = {workspace = true}
model={path = "../model"}
sea-orm = {workspace = true}
tokio = {workspace = true}
chrono="0.4"
dotenv ="0.15"
lettre = "0.11"
serde = {workspace = true}
actix-web= "4"
serde_json = {workspace = true}
schema = {path ="../schema"}
constant = {path = "../constant"}


