[package]
name = "error"
version = "0.1.0"
edition = "2021"

[dependencies]
thiserror = {workspace = true}
serde_yaml = {workspace = true}
sqlx={workspace = true}
sha2 = "0.10.8"
anyhow = "1.0.86"
jwt = "0.16.0"
actix-web="4"
tokio = {workspace = true}
sea-orm = {workspace = true}
serde = {workspace = true}
tera = {workspace = true}